force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__BenefitManagerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitManagerId__c</fullName>
    <label>Benefit Manager</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitManagerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>