force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__BenefitStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitStatus__c</fullName>
    <label>Benefit Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>