force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__CurrentMonthDisbursedQty__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentMonthDisbursedQty__c</fullName>
    <label>Current Month Disbursed Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentMonthDisbursedQty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>