force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__CurrentYearDisbursedQty__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentYearDisbursedQty__c</fullName>
    <label>Current Year Disbursed Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentYearDisbursedQty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>