force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__EnrollmentCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnrollmentCount__c</fullName>
    <label>Enrollment Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnrollmentCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>