force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__PreviousMonthDisbursedQty__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviousMonthDisbursedQty__c</fullName>
    <label>Previous Month Disbursed Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousMonthDisbursedQty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>