force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__PreviousYearAssignedQty__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviousYearAssignedQty__c</fullName>
    <label>Previous Year Assigned Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousYearAssignedQty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>