force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__rel_1716668973518_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668973518_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramBenefit_ProgramId_map_Program_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>ProgramBenefit_ProgramId_map_Program_rel</relationshipLabel>
    <relationshipName>rel_1716668973518_end</relationshipName>
    <type>Lookup</type>
</CustomField>