force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__rel_1716668983080_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668983080_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramBenefit_GoalDefinitionId_map__rel</label>
    <referenceTo>ssot__GoalDefinition__dlm</referenceTo>
    <relationshipLabel>ProgramBenefit_GoalDefinitionId_map__rel</relationshipLabel>
    <relationshipName>rel_1716668983080_end</relationshipName>
    <type>Lookup</type>
</CustomField>