force-app/main/default/objects/ssot__ProgramBenefit__dlm/fields/ssot__rel_1716668989843_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668989843_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramBenefit_BenefitManagerId_map__rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ProgramBenefit_BenefitManagerId_map__rel</relationshipLabel>
    <relationshipName>rel_1716668989843_end</relationshipName>
    <type>Lookup</type>
</CustomField>